--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,3 +5,9 @@ numpy==1.22.4
 pandas==1.5.1
 pydantic==1.9.1
 scikit_learn==1.3.0
+networkx==3.1
+networkit==10.1
+shapely==2.0.1
+pyarrow==13.0.0
+pyproj==3.5.0
+pygeos
