--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.101.0
+fastapi==0.103.2
 geojson_pydantic==0.3.3
 geopandas==0.10.2
 numpy==1.22.4
 pandas==1.5.1
 pydantic==1.9.1
-scikit_learn==1.3.0
+scikit_learn==1.3.1
+Shapely==1.8.4
+pyarrow==13.0.0
+
